[package]
name = "linkedslab"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[dependencies]
generic-array = "0.14.1"
# Nothing

[dev-dependencies]
criterion = "0.3.2"
rand = "0.7"
im = "15.0.0"
im-rc = "15.0.0"

[[bench]]
name = "benches"
path = "benches/main.rs"
harness = false
